-webkit-clip-path wrong offset for clipPath references https://bugs.webkit.org/show_bug.cgi?id=129246

Reviewed by Simon Fraser.

Source/WebCore:

Compute the correct offset for reference clip-paths by reusing
some of the logic from basic shapes.
Makes reference based clip-path interoperable and follows the
spec.

Test: css3/masking/clip-path-reference-2.html

* rendering/RenderLayer.cpp:
(WebCore::computeReferenceBox):
(WebCore::RenderLayer::computeClipPath const):
(WebCore::RenderLayer::setupClipPath):

LayoutTests:

Add test for reference clip-path offset. Correct a broken test.
All tests in the repo for references are interoperable between Gecko, Blink
and WebKit now.

* css3/masking/clip-path-reference-2-expected.html: Added.
* css3/masking/clip-path-reference-2.html: Added.
* css3/masking/clip-path-reference-userSpaceOnUse-expected.html:
* css3/masking/clip-path-reference-userSpaceOnUse.html:


Canonical link: https://commits.webkit.org/202375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233287 268f45cc-cd09-0410-ab3c-d52691b4dbfc